BytecodeGenerator cleanup and and types handling fixes
Reviewed-by: psandoz